<resources>
    <string name="app_name"> SFCMS </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>

    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>

    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Login and Registration -->
    <string name="hint_name">Name</string>

    <string name="hint_email">Email</string>

    <string name="hint_password">Password</string>

    <string name="hint_confirm_password">Confirm Password</string>

    <string name="text_login">Login</string>

    <string name="text_register">Register</string>

    <string name="error_message_name">Enter Proper Name</string>

    <string name="error_message_email">Enter Valid Email</string>

    <string name="error_message_password">Use Another Password</string>

    <string name="success_message">Registration Successful!!</string>

    <string name="text_not_member">No account? Create One</string>

    <string name="text_already_member">Already a member? Login</string>

    <string name="error_email_exists">Email Already Exists</string>

    <string name="error_password_match">Passwords Must Match</string>

    <string name="error_valid_email_password">Invalid Email/Password</string>

</resources>

