<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/nestedScrollView"
    android:padding="20dp"
    android:background="@drawable/gradient">

   <android.support.v7.widget.FitWindowsLinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">

       <android.support.v7.widget.AppCompatImageView
           android:layout_width="wrap_content"
           android:layout_height="110dp"
           android_layout_gravity="center_horizontal"
           android:layout_marginTop="20dp"
           android:src="@drawable/logo" />

       <android.support.design.widget.TextInputLayout
           android:id="@+id/textInputLayoutName"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="10dp" >

           <android.support.design.widget.TextInputEditText
               android:id="@+id/textInputEditTextName"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/hint_name"
               android:textColorHint="#000000"
               android:inputType="text"
               android:maxLines="1"
               android:textColor="@color/colorText" />
       </android.support.design.widget.TextInputLayout>

       <android.support.design.widget.TextInputLayout
           android:id="@+id/textInputLayoutEmail"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="10dp" >

           <android.support.design.widget.TextInputEditText
               android:id="@+id/textInputEditTextEmail"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/hint_email"
               android:textColorHint="@color/colorText"
               android:inputType="text"
               android:maxLines="1"
               android:textColor="@color/colorText" />
       </android.support.design.widget.TextInputLayout>

       <android.support.design.widget.TextInputLayout
           android:id="@+id/textInputLayoutPassword"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="10dp" >

           <android.support.design.widget.TextInputEditText
               android:id="@+id/textInputEditTextPassword"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/hint_password"
               android:textColorHint="@color/colorText"
               android:inputType="textPassword"
               android:maxLines="1"
               android:textColor="@color/colorText" />
       </android.support.design.widget.TextInputLayout>

       <android.support.design.widget.TextInputLayout
           android:id="@+id/textInputConfirmPassword"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="10dp" >

           <android.support.design.widget.TextInputEditText
               android:id="@+id/textInputEditTextConfirmPassword"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/hint_confirm_password"
               android:textColorHint="@color/colorText"
               android:inputType="textPassword"
               android:maxLines="1"
               android:textColor="@color/colorText" />
       </android.support.design.widget.TextInputLayout>

       <android.support.v7.widget.AppCompatButton
           android:id="@+id/appCompatButtonRegister"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="28dp"
           android:textColor="@color/colorText"
           android:background="@color/colorPrimary"
           android:text="@string/text_register" />

       <android.support.v7.widget.AppCompatTextView
           android:id="@+id/appCompatTextViewLoginLink"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="30dp"
           android:gravity="center"
           android:text="@string/text_already_member"
           android:textStyle="bold"
           android:textSize="16sp"
           android:textColor="@color/colorText" />

   </android.support.v7.widget.FitWindowsLinearLayout>

</android.support.v4.widget.NestedScrollView>